--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-gymnasium
-matplotlib
-moviepy
-networkx
-numpy
-pandas
-scikit-image
-scipy
-seaborn
-stable_baselines3
-tabulate
-tensorboard
-tinydb
-torch
-tyro
-wandb
 # server
-Django
-django-cors-headers
+Django==5.1
+django-cors-headers==4.4.0
+gymnasium==0.29.1
+matplotlib==3.9.2
+moviepy==1.0.3
+networkx==3.3
+numpy==1.26.4
+pandas==2.2.2
+scikit-image==0.24.0
+scipy==1.9.2
+seaborn==0.12.1
+stable_baselines3==2.3.2
+tabulate==0.8.9
+tensorboard==2.12.3
+tinydb==4.7.0
+torch==2.2
+tyro==0.8.5
+wandb==0.17.6
